Disable some linters

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,5 @@
+version: "2"
+
 run:
   timeout: 5m
   modules-download-mode: readonly
@@ -20,7 +22,7 @@ linters:
     - godot            # Comments end with period (too strict)
     - godox            # TODO comments (we want them)
     - ireturn          # Interface returns (sometimes valid pattern)
-    # lll - Line length linting enabled for source files, disabled for test files via exclude-rules
+    - lll              # Line length linting enabled for source files, disabled for test files via exclude-rules
     - maintidx         # Maintainability index (too strict)
     - mnd              # Magic numbers (not every number is magic)
     - nestif           # Nested if statements (sometimes needed)
@@ -36,6 +38,20 @@ linters:
     - varnamelen       # Variable name length (too strict)
     - wrapcheck        # Error wrapping (too strict)
     - wsl              # Whitespace linter (gofmt handles this)
+    - wsl_v5           # Whitespace linter v5 (gofmt handles this)
+    - thelper          # TODO: add back later
+    - revive           # TODO: add back later
+    - perfsprint       # TODO: add back later
+    - dupl             # TODO: add back later
+    - err113           # TODO: add back later
+    - embeddedstructfieldcheck # TODO: add back later
+    - errcheck         # TODO: add back later
+    - errorlint        # TODO: add back later
+    - forbidigo        # TODO: add back later
+    - gocritic         # TODO: add back later
+    - intrange         # TODO: add back later
+    - staticcheck      # TODO: add back later
+    - unparam          # TODO: add back later
 
 linters-settings:
   staticcheck:
