--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,7 +53,8 @@ jobs:
     - name: Lint
       uses: golangci/golangci-lint-action@v4
       with:
-        version: latest
+        version: v2.2
+        args: --timeout=5m
 
   # Build and test on multiple platforms
   test:
